# nlp-examples

./: LICENSE  README.md  micrograd_exercises.ipynb
categorization/: pyproject.toml
